# ffmpeg-gui

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
electron/: main.cjs  preload.cjs
scripts/: tauri-build.mjs
src/: App.tsx  desktop.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SectionTitle.tsx
src/data/: appData.ts
src/styles/: app.css
