[package]
name = "ffmpeg_forge"
version = "0.1.0"
description = "Desktop GUI for FFmpeg workflows"
authors = ["Nordik"]
license = "MIT"
edition = "2021"

[lib]
name = "ffmpeg_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
